Add myself to AUTHORS, about time...

--- a/AUTHORS
+++ b/AUTHORS
@@ -19,6 +19,9 @@ Main contributors:
     email: gnw20@cam.ac.uk
     www:   http://www.eng.cam.ac.uk/~gnw20/
 
+    Martin Sandve Alnæs
+    email: martinal@simula.no
+
 Contributors:
 
     Jan Blechta
