Fix UFL -> FFC in a README file.

--- a/doc/sphinx/README
+++ b/doc/sphinx/README
@@ -11,7 +11,7 @@ master branch.
 Updating the API documentation
 ==============================
 
-If the UFL API is changed, the script::
+If the FFC API is changed, the script::
 
     ./generate-apidoc
 
