--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+ - Add dependency on dijitso and remove dependency on instant
  - Add experimental Bitbucket pipelines
  - Tidy the repo after UFC and UFLACS merge, and general spring cleanup. This
    includes removal of instructions how to merge two repos, commit hash
