Small doc tweak [skip ci]

--- a/doc/sphinx/source/releases/v2017.1.0.rst
+++ b/doc/sphinx/source/releases/v2017.1.0.rst
@@ -8,8 +8,7 @@ Summary of changes
 ==================
 
 - Add experimental ``tsfc`` representation; for installation see
-  `the reference manual
-  <https://fenics.readthedocs.io/projects/ffc/en/latest/installation.html>`_
+  :ref:`tsfc_requirements`
 
 
 Detailed changes
