Added info about quadhex to changelog

--- a/AUTHORS
+++ b/AUTHORS
@@ -57,6 +57,9 @@ Contributors:
     email: aterrel@uchicago.edu
     www:   http://people.cs.uchicago.edu/~aterrel/
 
+    Ivan Yashchuk
+    email: ivan.yashchuk@aalto.fi
+
 
 Credits for UFC
 ===============
