Add Fabian to Authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -49,6 +49,10 @@ Contributors:
     email: dag@f.kth.se
     www:   http://www.f.kth.se/~dag/
 
+    Fabian Löschner
+    email: fabian.loeschner@rwth-aachen.de
+    www:   https://w1th0utnam3.github.io/
+
     Ola Skavhaug
     email: skavhaug@simula.no
     www:   http://home.simula.no/~skavhaug/
